# home-finance

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
app/: auth.py  config.py  database.py  main.py
app/components/: category_chart.py  file_uploader.py  transaction_table.py
app/pages/: 1_Dashboard.py  2_Transactions.py  3_Upload.py  4_Categories.py  5_Settings.py
app/parsers/: __init__.py  base.py  cgd.py
app/services/: analytics_service.py  category_service.py  import_service.py  supabase_service.py
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOY.md  RUNBOOK.md
docs/ADR/: 0001-stack-and-infra.md
docs/specs/: TEMPLATE.md
infra/docker/: Dockerfile  docker-compose.yml
infra/terraform/: cloud-run.tf  main.tf  terraform.tfvars.example  variables.tf
supabase/migrations/: 001_initial_schema.sql
tests/: conftest.py
tests/test_parsers/: test_cgd.py
tests/test_services/: test_analytics_service.py  test_category_service.py
