[project]
name = "home-finance-saas"
version = "0.1.0"
description = "Personal finance dashboard - parse bank statements, categorize transactions, visualize spending"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.39.0",
    "pypdf>=5.1.0",
    "pandas>=2.2.0",
    "altair>=5.0.0",
    "supabase>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
